[package]
name = "msimg32-dll-injector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3"
anyhow = "1"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
debug = false
strip = true
